# qfabric

./: LICENSE  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml
docs/source/: conf.py  index.rst
docs/source/api/: api.rst  api_manager.rst  api_planner.rst  api_programmer.rst  api_qfabric.rst  api_sequence.rst  api_visualizer.rst
docs/source/developers/: add_awg_support.rst  for_developers.rst  manager_components.rst
docs/source/getting_started/: awg_support.rst  getting_started.rst  quick_start.rst  sequence.rst  what_is_qfabric.rst
docs/source/how_to/: how_to.rst  how_to_config.rst  how_to_function.rst  how_to_visualize.rst
examples/compare_sequence/: compare_sequence.py
examples/quick_start/: config.toml  quick_start_example.py
examples/visualization/: visualize.py
src/qfabric/: __init__.py  _util.py
src/qfabric/manager/: config.py  example_config.toml  experiment_manager.py
src/qfabric/planner/: planner.py
src/qfabric/planner/segmenter/: __init__.py  awg710.py  m4i6622.py  mock.py  virtual.py
src/qfabric/programmer/: programmer.py
src/qfabric/programmer/device/: __init__.py  awg710.py  m4i6622.py  mock.py  virtual.py
src/qfabric/programmer/driver/: m4i6622.py
src/qfabric/programmer/driver/awg710/: __init__.py  commands.py  data.py
src/qfabric/programmer/driver/m4i6622/: __init__.py  pyspcm.py  spcm_tools.py
src/qfabric/programmer/driver/m4i6622/py_header/: regs.py  spcerr.py
src/qfabric/sequence/: basic_functions.py  function.py  sequence.py  step.py
src/qfabric/visualizer/: data_source.py  models.py  mpl_viewer.py  plot.py  power_spectrum.py
tests/manager/: mock_config.toml  test_experiment_manager.py
tests/planner/segmenter/: test_awg710.py  test_m4i6622.py  test_segmenter.py
tests/sequence/: test_basic_functions.py  test_function.py  test_sequence.py  test_step.py
tests/visualize/: test_model_and_data_source.py  test_plot.py  test_power_spectrum.py
