[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "qfabric"
version = "0.1.0"
description = "Pulse sequence compiler, visualizer, and experiment manager for all AWGs."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Mingyu Fan" }
]
dependencies = [
  "numpy",
  "pydantic",
  "bokeh",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  # testing
  "pytest",
  "pytest-cov",

  # code style
  "black",
  "isort",
]
docs = [
  "sphinx",
  "sphinx-autodoc-typehints",
  "furo",
  "myst-parser",
  "sphinx-copybutton",
  "sphinx-autobuild",
  ]

[tool.hatch.build.targets.wheel]
packages = ["src/qfabric"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.isort]
profile = "black"

[tool.pytest]
python_files = ["test_*.py"]
addopts = ["--cov", "src/qfabric", "--cov-report", "html"]
testpaths = ["tests"]

[tool.coverage.report]
omit = [
  "src/qfabric/programmer/driver/m4i6622/*",
  "src/qfabric/programmer/device/m4i6622.py",
  "src/qfabric/programmer/driver/awg710/*",
  "src/qfabric/programmer/device/awg710.py",
]
